fix: help updated

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -1,99 +1,99 @@
 {
-	"New Game": "Новая игра",
-	"Versions": "Версии",
-	"Skins": "Обложки",
-	"About": "О приложении",
-	"Help": "Справка",
+  "New Game": "Новая игра",
+  "Versions": "Версии",
+  "Skins": "Обложки",
+  "About": "О приложении",
+  "Help": "Справка",
 
-	"Scroll": "Прокрутка",
-	"Short Press": "Короткое нажатие",
-	"Long Press": "Долгое нажатие",
-	"Calculator": "Калькулятор",
-	"Equals": "Считать",
-	"XP": "Очки опыта",
-	"Track experience points": "Отслеживать очки опыта",
-	"Save trauma": "Сохранять травмы",
+  "Scroll": "Прокрутка",
+  "Short Press": "Короткое нажатие",
+  "Long Press": "Долгое нажатие",
+  "Calculator": "Калькулятор",
+  "Equals": "Считать",
+  "XP": "Очки опыта",
+  "Track experience points": "Отслеживать очки опыта",
+  "Save trauma": "Сохранять травмы",
 
-	"Loading fonts": "Загрузка шрифтов",
-	"Loading assets {{count}}/{{total}}": "Загрузка текстур {{count}}/{{total}}",
-	"Haptic": "Вибрация",
-	"Reset Board?": "Сбросить данные?",
-	"System (if available)": "Системная (если есть)",
-	"board.reset.text": "Действие сбросит данные на начало игры для этого сыщика",
-	"Investigator Special Actions": "Специальные действия",
-	"Press and hold": "Нажмите и удерживайте",
-	"Hold to seal": "Удерживайте, чтобы запечатать",
-	"Hold": "Удерживайте",
+  "Loading fonts": "Загрузка шрифтов",
+  "Loading assets {{count}}/{{total}}": "Загрузка текстур {{count}}/{{total}}",
+  "Haptic": "Вибрация",
+  "Reset Board?": "Сбросить данные?",
+  "System (if available)": "Системная (если есть)",
+  "board.reset.text": "Действие сбросит данные на начало игры для этого сыщика",
+  "Investigator Special Actions": "Специальные действия",
+  "Press and hold": "Нажмите и удерживайте",
+  "Hold to seal": "Удерживайте, чтобы запечатать",
+  "Hold": "Удерживайте",
 
-	"Health/Sanity": "Здоровье/Рассудок",
-	"Show health/sanity": "Показать здоровье/рассудок",
-	"Show damage/horror": "Показать раны/ужас",
+  "Health/Sanity": "Здоровье/Рассудок",
+  "Show health/sanity": "Показать здоровье/рассудок",
+  "Show damage/horror": "Показать раны/ужас",
 
-	"Spoiler Alert": "Осторожно, спойлеры!",
-	"Game settings": "Игра",
-	"modal.spoiler.message": "Этот раздел содержит сюжетные спойлеры. Продолжить?",
-	"Turn end": "Конец хода",
+  "Spoiler Alert": "Осторожно, спойлеры!",
+  "Game settings": "Игра",
+  "modal.spoiler.message": "Этот раздел содержит сюжетные спойлеры. Продолжить?",
+  "Turn end": "Конец хода",
 
-	"No main & additional actions": "Нет основных и доп. действий",
-	"No main actions": "Нет основных действий",
+  "No main & additional actions": "Нет основных и доп. действий",
+  "No main actions": "Нет основных действий",
 
-	"Damage/Horror visual effects": "Эффекты ран/ужаса",
+  "Damage/Horror visual effects": "Эффекты ран/ужаса",
 
-	"Scroll Deceleration": "Замедление прокрутки",
-	"Inertial Scrolling": "Инерция при прокрутке",
+  "Scroll Deceleration": "Замедление прокрутки",
+  "Inertial Scrolling": "Инерция при прокрутке",
 
-	"Behavior": "Поведение",
+  "Behavior": "Поведение",
 
-	"app.outdated.title": "Приложение устарело",
-	"app.outdated.text": "Не так, как древние, но пора бы обновиться",
+  "app.outdated.title": "Приложение устарело",
+  "app.outdated.text": "Не так, как древние, но пора бы обновиться",
 
-	"picker.deceleration.fast": "Быстрое",
-	"picker.deceleration.normal": "Нормальное",
-	"picker.deceleration.instant": "Мгновенное",
-	"picker.deceleration.custom": "Настроить",
+  "picker.deceleration.fast": "Быстрое",
+  "picker.deceleration.normal": "Нормальное",
+  "picker.deceleration.instant": "Мгновенное",
+  "picker.deceleration.custom": "Настроить",
 
-	"board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения",
+  "board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения",
 
-	"board.help.press.main": "Уменьшает значение на 1",
-	"board.help.press.action": "Уменьшает значение на 1. Если значение равно 0, сбрасывает счётчик до базового значения",
+  "board.help.press.main": "Уменьшает значение на 1",
+  "board.help.press.action": "Уменьшает значение на 1. Если значение равно 0, сбрасывает счётчик до базового значения",
 
-	"board.help.press.undo": "Отменить последнее действие",
-	"board.help.press.redo": "Вернуться к предыдущему действию",
+  "board.help.press.undo": "Отменить последнее действие",
+  "board.help.press.redo": "Вернуться к предыдущему действию",
 
-	"board.help.press.skills": "Открывает калькулятор навыков",
+  "board.help.press.skills": "Открывает калькулятор навыков",
 
-	"board.help.press.reset": "Сбрасывает параметры до первоначального состояния",
+  "board.help.press.reset": "Сбрасывает параметры до первоначального состояния",
 
-	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменения значений навыков. Также это действие позволяет вытянуть жетон хаоса",
+  "board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменения значений навыков. Также это действие позволяет вытянуть жетон хаоса",
 
-	"board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку)",
-	"board.help.longPress.secondary": "Сбрасывает значение до 0",
+  "board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку)",
+  "board.help.longPress.secondary": "Сбрасывает значение до 0",
 
-	"board.help.longPress.redo": "Возвращает историю изменений к последней правке",
-	"board.help.longPress.undo": "Прокручивает историю изменений к начальному состоянию",
+  "board.help.longPress.redo": "Возвращает историю изменений к последней правке",
+  "board.help.longPress.undo": "Прокручивает историю изменений к начальному состоянию",
 
-	"board.help.calculator.toggleKeyboard": "Скрывает/показывает клавиатуру",
-	"board.help.calculator.clearHistory": "Очищает историю проверок",
+  "board.help.calculator.toggleKeyboard": "Скрывает/показывает клавиатуру",
+  "board.help.calculator.clearHistory": "Очищает историю проверок",
 
-	"board.help.special.additionalAction": "Некоторые сыщики имеют особые дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное",
-	"board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс)",
+  "board.help.special.additionalAction": "Некоторые сыщики имеют особые дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное",
+  "board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс)",
 
-	"board.help.calculator.result": "Минимальный результат - 0. Деление округляет результат в меньшую сторону",
-	"board.help.calculator.history": "Нажмите на «Считать» чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если поменяются параметры вашего сыщика.\nУдерживайте нажатие, чтобы вытянуть жетон хаоса для проверки навыка по этому расчёту",
-	"board.help.calculator.history.actions": "Свайп влево на старых расчётах открывает меню с опциями: Удалить расчёт, Задать имя, Закрепить расчёт",
-	"board.help.calculator.history.remove": "Удалить расчёт",
-	"board.help.calculator.history.set-name": "Дать название расчёта",
-	"board.help.calculator.history.pin": "Закрепить расчёт наверху списка и на планшете",
+  "board.help.calculator.result": "Минимальный результат - 0. Деление округляет результат в меньшую сторону",
+  "board.help.calculator.history": "Нажмите на «Считать» чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если поменяются параметры вашего сыщика.\nУдерживайте нажатие, чтобы вытянуть жетон хаоса для проверки навыка по этому расчёту",
+  "board.help.calculator.history.actions": "Свайп влево на старых расчётах открывает меню с опциями: Удалить расчёт, Задать имя, Закрепить расчёт",
+  "board.help.calculator.history.remove": "Удалить расчёт",
+  "board.help.calculator.history.set-name": "Дать название расчёта",
+  "board.help.calculator.history.pin": "Закрепить расчёт наверху списка и на планшете",
 
-	"board.help.pins.press": "На экране планшета нажатие на расчёте открепляет расчёт",
-	"board.help.pins.longPress": "На экране планшета удерживайте нажатие, чтобы вытянуть жетон хаоса для данного расчёта",
-	"board.help.pins.toggle": "Если у вас есть закрплённые расчёты, то вы можете нажать на блок расчётов, чтобы его скрыть/показать",
+  "board.help.pins.press": "На экране планшета нажатие на расчёте открепляет расчёт",
+  "board.help.pins.longPress": "На экране планшета удерживайте нажатие, чтобы вытянуть жетон хаоса для данного расчёта",
+  "board.help.pins.toggle": "Если у вас есть закрплённые расчёты, то вы можете нажать на блок расчётов, чтобы его скрыть/показать",
 
-	"board.help.chaosBag": "Чтобы вытянуть жетон хаоса, удерживайте нажатие в свободном месте или на значении навыка",
-	"board.help.chaosBag.returnAll": "Вернуть все вытянутые жетоны в мешок хаоса",
-	"board.help.chaosBag.return": "[token_symbol_fill] - Вернуть все вытянутые жетоны в мешок хаоса (кроме [bless] и [curse])",
-	"board.help.chaosBag.token.press": "Нажатие на жетон вернёт его в мешок или удалит, если это [bless] или [curse]",
-	"board.help.chaosBag.token.longPress": "Удерживайте нажатие на вытянутом жетоне, чтобы его запечатать",
-	"board.help.chaosBag.oneMore": "Нажмите, чтобы вытянуть ещё один жетон",
-	"board.help.calculator.chaosToken": "Удерживайте нажатие, чтобы вытянуть жетон хаоса для проверки навыка по последнему расчёту"
+  "board.help.chaosBag": "Чтобы вытянуть жетон хаоса, удерживайте нажатие в свободном месте или на значении навыка",
+  "board.help.chaosBag.returnAll": "Вернуть все вытянутые жетоны в мешок хаоса",
+  "board.help.chaosBag.return": "[token_symbol_fill] - Вернуть все вытянутые жетоны в мешок хаоса (кроме [bless] и [curse])",
+  "board.help.chaosBag.token.press": "Нажатие на жетон вернёт его в мешок или удалит, если это [bless] или [curse]",
+  "board.help.chaosBag.token.longPress": "Удерживайте нажатие на вытянутом жетоне, чтобы его запечатать",
+  "board.help.chaosBag.oneMore": "Нажмите, чтобы вытянуть ещё один жетон",
+  "board.help.calculator.chaosToken": "Нажмите, чтобы вытянуть жетон хаоса для проверки навыка по последнему расчёту"
 }
