feat: reveal token by long pressing on bag icon

--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -52,5 +52,8 @@
 	"board.help.chaosBag.token.press": "Tap on a revealed token to return it to the chaos bag (or remove if it is [bless] or [curse])",
 	"board.help.chaosBag.token.longPress": "Long press on a revealed token to seal it",
 	"board.help.chaosBag.oneMore": "Tap to reveal one more token",
-	"board.help.calculator.chaosToken": "Tap to reveal a chaos token for the last calculation"
+	"board.help.calculator.chaosToken": "Tap to reveal a chaos token for the last calculation",
+
+	"board.help.press.chaosBag": "Chaos bag contents",
+	"board.help.longPress.chaosBag": "Reveals a chaos token"
 }
