--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -32,7 +32,7 @@
 
 	"board.help.press.reset": "Resets investigator stats to their default values",
 
-	"board.help.hold.freeArea": "Tap and hold anywhere on the screen to see the taken damage and horror. You can also view the difference between base and actiual skill values. By holding more, you will reveal a token from the chaos bag",
+	"board.help.hold.freeArea": "Tap and hold anywhere on the screen to see the taken damage and horror. You can also view the difference between base and actiual skill values",
 
 	"board.help.longPress.main": "Shows/hides modifier counter. You can change base value (e.g. permanent +1 health, -2 sanity)",
 	"board.help.longPress.secondary": "Resets value to 0",
@@ -46,7 +46,7 @@
 	"board.help.special.additionalAction": "Some investigators have additional actions. Tap on this icon to mark action as completed",
 	"board.help.special.lola": "Tap on the name to change Lola's current role (faction)",
 
-	"board.help.chaosBag": "Tap and hold anywhere on the screen or on a skill value",
+	"board.help.chaosBag": "Tap and hold on a skill value to reveal a chaos token",
 	"board.help.chaosBag.returnAll": "Return all revealed tokens to the chaos bag",
 	"board.help.chaosBag.return": "[token_symbol_fill] - Return all revealed tokens to the chaos bag (exceping [bless] and [curse])",
 	"board.help.chaosBag.token.press": "Tap on a revealed token to return it to the chaos bag (or remove if it is [bless] or [curse])",
