--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -64,7 +64,7 @@
 
 	"board.help.press.reset": "Сбрасывает параметры до первоначального состояния",
 
-	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменения значений навыков. Также это действие позволяет вытянуть жетон хаоса",
+	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменения значений навыков",
 
 	"board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку)",
 	"board.help.longPress.secondary": "Сбрасывает значение до 0",
@@ -89,7 +89,7 @@
 	"board.help.pins.longPress": "На экране планшета удерживайте нажатие, чтобы вытянуть жетон хаоса для данного расчёта",
 	"board.help.pins.toggle": "Если у вас есть закрплённые расчёты, то вы можете нажать на блок расчётов, чтобы его скрыть/показать",
 
-	"board.help.chaosBag": "Чтобы вытянуть жетон хаоса, удерживайте нажатие в свободном месте или на значении навыка",
+	"board.help.chaosBag": "Чтобы вытянуть жетон хаоса, удерживайте нажатие на значении навыка",
 	"board.help.chaosBag.returnAll": "Вернуть все вытянутые жетоны в мешок хаоса",
 	"board.help.chaosBag.return": "[token_symbol_fill] - Вернуть все вытянутые жетоны в мешок хаоса (кроме [bless] и [curse])",
 	"board.help.chaosBag.token.press": "Нажатие на жетон вернёт его в мешок или удалит, если это [bless] или [curse]",
