fix: xp name translation

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -10,7 +10,7 @@
 	"Long Press": "Долгое нажатие",
 	"Calculator": "Калькулятор",
 	"Equals": "Считать",
-	"XP": "Очки опыта",
+	"XP": "Опыт",
 	"Track experience points": "Отслеживать очки опыта",
 	"Save trauma": "Сохранять травмы",
 
