feat: base carson ability

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -99,5 +99,7 @@
 
 	"board.help.press.chaosBag": "Показывает содержимое мешка хаоса",
 	"board.help.longPress.chaosBag": "Вытягивает жетон хаоса",
-	"Chaos bag loading animation": "Анимация мешка хаоса"
+	"Chaos bag loading animation": "Анимация мешка хаоса",
+	"Give action": "Дать действие",
+	"Not selected": "Не выбрано"
 }
