feat: minh ability

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -101,5 +101,6 @@
 	"board.help.longPress.chaosBag": "Вытягивает жетон хаоса",
 	"Chaos bag loading animation": "Анимация мешка хаоса",
 	"Give action": "Дать действие",
-	"Not selected": "Не выбрано"
+	"Not selected": "Не выбрано",
+	"Add wild": "Добавить ? значение"
 }
