feat: doom tracker

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -102,5 +102,6 @@
 	"Chaos bag loading animation": "Анимация мешка хаоса",
 	"Give action": "Дать действие",
 	"Not selected": "Не выбрано",
-	"Add wild": "Добавить ? значение"
+	"Add wild": "Добавить ? значение",
+	"Track Doom": "Безысходность"
 }
