feat: keep awake mode

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -103,5 +103,6 @@
 	"Give action": "Дать действие",
 	"Not selected": "Не выбрано",
 	"Add wild": "Добавить ? значение",
-	"Track Doom": "Безысходность"
+	"Track Doom": "Безысходность",
+	"Keep awake": "Предотвратить спящий режим"
 }
