feat: hand size control / scenario values

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -103,5 +103,6 @@
 	"Give action": "Дать действие",
 	"Not selected": "Не выбрано",
 	"Add wild": "Добавить ? значение",
-	"Keep awake": "Предотвратить спящий режим"
+	"Keep awake": "Предотвратить спящий режим",
+	"Track Hand Size": "Размер руки"
 }
