--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -104,5 +104,7 @@
 	"Not selected": "Не выбрано",
 	"Add wild": "Добавить ? значение",
 	"Keep awake": "Предотвратить спящий режим",
-	"Track Hand Size": "Размер руки"
+	"Track Hand Size": "Размер руки",
+	"Doom": "Безысходность",
+	"General": "Основное"
 }
