feat: app audio

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -106,5 +106,7 @@
 	"Keep awake": "Предотвратить спящий режим",
 	"Track Hand Size": "Размер руки",
 	"Doom": "Безысходность",
-	"General": "Основное"
+	"General": "Основное",
+	"Sound Effects": "Звуковые эффекты",
+	"Volume": "Громкость"
 }
