--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -57,6 +57,8 @@
 	"board.help.press.chaosBag": "Chaos bag contents",
 	"board.help.longPress.chaosBag": "Reveals a chaos token",
 
+	"settings.sound": "Sound (Beta)",
+
 	"Chaos bag loading animation": "Chaos bag loading animation",
 
 	"Give action": "Give action",
