--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -59,7 +59,7 @@
 
 	"Chaos bag loading animation": "Анимация мешка хаоса",
 
-	"Give action": "Дать действие",
+	"Give an action": "Дать действие",
 	"Not selected": "Не выбрано",
 	"Add wild": "Добавить ? значение",
 	"Keep awake": "Предотвратить спящий режим",
