--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -59,6 +59,9 @@
 
 	"settings.sound": "Sound (Beta)",
 
+	"tapOnPin.default": "Tap on a calculation to unpin it",
+	"tapOnPin.advanced": "Tap on a calculation to close the whole block. Double tap to unpin",
+
 	"Chaos bag loading animation": "Chaos bag loading animation",
 
 	"Give action": "Give action",
