feat: always show game text

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -60,6 +60,7 @@
 	"tapOnPin.default": "Нажмите на расчёте, чтобы его убрать",
 	"tapOnPin.advanced": "Нажмите на расчёте, чтобы скрыть блок. Двойное нажатие убирает расчёт",
 
+	"Show Game Text": "Игровой текст",
 	"Advanced": "Продвинутый режим",
 	"Pinned calculations": "Закреплённые расчёты",
 
