fix: picker ru translation

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -66,6 +66,8 @@
 
 	"Chaos bag loading animation": "Анимация мешка хаоса",
 
+	"Select Item": "Выберите значение",
+
 	"Give an action": "Дать действие",
 	"Not selected": "Не выбрано",
 	"Add wild": "Добавить ? значение",
