feat: pin position

--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -60,7 +60,7 @@
 	"settings.sound": "Sound (Beta)",
 
 	"tapOnPin.default": "Tap on a calculation to unpin it",
-	"tapOnPin.advanced": "Tap on a calculation to close the whole block. Double tap to unpin",
+	"tapOnPin.advanced": "Tap on a calculation to close the whole block. Swipe right to unpin",
 
 	"Chaos bag loading animation": "Chaos bag loading animation",
 
