--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -58,7 +58,7 @@
 	"settings.sound": "Звук (Beta)",
 
 	"tapOnPin.default": "Нажмите на расчёте, чтобы его убрать",
-	"tapOnPin.advanced": "Нажмите на расчёте, чтобы скрыть блок. Двойное нажатие убирает расчёт",
+	"tapOnPin.advanced": "Нажмите на расчёте, чтобы скрыть блок. Свайп вправо убирает расчёт",
 
 	"modal.spoiler.message": "Этот раздел содержит сюжетные спойлеры. Продолжить?",
 
