feat: show expression on skill checks

--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -67,6 +67,8 @@
 
 	"Chaos bag loading animation": "Chaos bag loading animation",
 
+	"Show calculation changes": "Show calculation changes",
+
 	"Give action": "Give action",
 	"Not selected": "Not selected",
 	"Add wild": "Add wild",
