--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -65,6 +65,8 @@
 	"modal.skillCheck.clear": "Очистить историю?",
 	"modal.skillCheck.clear.text": "Это действие безвозвратно удалит историю пройденных проверок",
 
+	"Show calculation changes": "Изменения вычислений",
+
 	"Show Game Text": "Игровой текст",
 	"Advanced": "Продвинутый режим",
 	"Pinned calculations": "Закреплённые расчёты",
