feat: updated help page

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -65,6 +65,10 @@
 	"modal.skillCheck.clear": "Очистить историю?",
 	"modal.skillCheck.clear.text": "Это действие безвозвратно удалит историю пройденных проверок",
 
+	"board.help.calculator.buttons": "Свайп вверх на цифрах 1-9 запускает проверку навыка и добавляет это число к проверке. Свайп вниз вычитает число из проверки. Удерживайте 0 или нажмите на жёлтую иконку вверху, чтобы запустить проверку навыка.\nУдерживайте кнопку «Считать», чтобы сохранить расчёт и немедленно запустить проверку, используя полученное значение",
+
+	"board.help.calculator.expression": "Свайп вправо или влево на текущей формуле стирает последний символ в расчёте",
+
 	"Show calculation changes": "Изменения вычислений",
 
 	"Show Game Text": "Игровой текст",
