feat: show initial sanity / health

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -72,6 +72,8 @@
 	"newGame.start.title": "Начать новую игру?",
 	"newGame.start.text": "Это действие удалит данные о последней игре",
 
+	"Show initial Health/Sanity": "Исходные здоровье и рассудок",
+
 	"Show calculation changes": "Изменения вычислений",
 
 	"Show Game Text": "Игровой текст",
