--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -72,6 +72,8 @@
 	"newGame.start.title": "Start new game?",
 	"newGame.start.text": "This action permanently remove your last game data",
 
+	"Show initial Health/Sanity": "Show initial Health/Sanity",
+
 	"Chaos bag loading animation": "Chaos bag loading animation",
 
 	"Show calculation changes": "Show calculation changes",
