feat: show modifiers / swipe refactoring

--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -78,6 +78,8 @@
 
 	"Show calculation changes": "Show calculation changes",
 
+	"Skill modfiers": "Skill modfiers",
+
 	"Give action": "Give action",
 	"Not selected": "Not selected",
 	"Add wild": "Add wild",
