feat: updated about and help pages

--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -72,6 +72,13 @@
 	"newGame.start.title": "Start new game?",
 	"newGame.start.text": "This action permanently remove your last game data",
 
+	"board.help.swipe.chaosBag": "Swipe right to reveal a chaos token. Swipe down to open see a reveal history page",
+	"board.help.press.clue": "Increase value by 1",
+
+	"board.help.pins.swipe": "Swipe down on a pinned calculation to go to a page where you've created this calculation",
+
+	"Swipe gestures": "Свайпы",
+
 	"Show initial Health/Sanity": "Show initial Health/Sanity",
 
 	"Chaos bag loading animation": "Chaos bag loading animation",
