--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -42,6 +42,7 @@
 
 	"board.help.pins.press": "На экране планшета нажатие на расчёте открепляет расчёт",
 	"board.help.pins.longPress": "На экране планшета удерживайте нажатие, чтобы вытянуть жетон хаоса для данного расчёта",
+	"board.help.pins.swipe": "Свайп вниз на закрплённым расчётом откроет калькулятор проверок для навыка с этим расчётом",
 	"board.help.pins.toggle": "Если у вас есть закрплённые расчёты, то вы можете нажать на блок расчётов, чтобы его скрыть/показать",
 
 	"board.help.chaosBag": "Чтобы вытянуть жетон хаоса, удерживайте нажатие на значении навыка",
@@ -71,6 +72,11 @@
 
 	"newGame.start.title": "Начать новую игру?",
 	"newGame.start.text": "Это действие удалит данные о последней игре",
+
+	"board.help.swipe.chaosBag": "Свайп вправо вытягивает жетон хаоса. Свайп вниз открывает историю проверок",
+	"board.help.press.clue": "Увеличивает значение на 1",
+
+	"Swipe gestures": "Свайпы",
 
 	"Skill modfiers": "Модификаторы навыков",
 
