--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -37,7 +37,7 @@
 	"board.help.calculator.history": "Нажмите на «Считать» чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если поменяются параметры вашего сыщика.\nУдерживайте нажатие, чтобы вытянуть жетон хаоса для проверки навыка по этому расчёту",
 	"board.help.calculator.history.actions": "Свайп влево на старых расчётах открывает меню с опциями: Удалить расчёт, Задать имя, Закрепить расчёт",
 	"board.help.calculator.history.remove": "Удалить расчёт",
-	"board.help.calculator.history.set-name": "Дать название расчёта",
+	"board.help.calculator.history.setName": "Дать название расчёта",
 	"board.help.calculator.history.pin": "Закрепить расчёт наверху списка и на планшете",
 
 	"board.help.pins.press": "На экране планшета нажатие на расчёте открепляет расчёт",
@@ -75,6 +75,7 @@
 
 	"board.help.swipe.chaosBag": "Свайп вправо вытягивает жетон хаоса. Свайп вниз открывает историю проверок",
 	"board.help.press.clue": "Увеличивает значение на 1",
+	"board.help.longPress.investigatorSelect": "Если вы играете за 2+ сыщиков, удерживайте нажатие на мини-изображении, чтобы посмотреть параметры всех сыщиков",
 
 	"Swipe gestures": "Свайпы",
 
